<resources>
    <string name="app_name">UdacityProjec0</string>
    <string name="action_settings">Settings</string>
    <string name="spotifyStreamer">Spotify Streamer</string>
    <string name="scoreApp">Score App</string>
    <string name="libraryApp">Library App</string>
    <string name="buildItBigger">Build It Bigger</string>
    <string name="xyzReader">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>

</resources>
