<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.appin.udacityprojec0.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/spotifyStreamer"
        style="@style/MainButtonStyle"
        android:text="@string/spotifyStreamer"
        android:layout_width="match_parent"
        android:onClick="onSpotifyStreamerClicked"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/scoresApp"
        style="@style/MainButtonStyle"
        android:text="@string/scoreApp"
        android:layout_width="match_parent"
        android:onClick="onScoresAppClicked"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/libraryApp"
        android:layout_width="match_parent"
        android:text="@string/libraryApp"
        style="@style/MainButtonStyle"
        android:onClick="onLibraryAppClicked"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buildItBiggerApp"
        android:layout_width="match_parent"
        android:text="@string/buildItBigger"
        style="@style/MainButtonStyle"
        android:onClick="onBuildItBiggerClicked"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/xyzReader"
        android:onClick="onXyzReaderClicked"
        android:text="@string/xyzReader"
        style="@style/MainButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/capstone"
        android:onClick="onCapstoneClicked"
        android:text="@string/capstone"
        style="@style/SpecialButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
